--- a/Recipes/Localizable.strings
+++ b/Recipes/Localizable.strings
@@ -22,3 +22,36 @@ Use the app in compliance with all applicable laws and regulations.
 Updates to Terms:
 Stay informed about updates; we'll notify you of any changes.
 By using our recipe app, you agree to adhere to these rules. Thank you for being a part of our culinary community! Enjoy exploring and cooking up a storm!";
+
+"description_text" = "
+1/2 to 2 fish heads, depending on size, about 5 pounds total
+2 tablespoons vegetable oil
+1/4 cup red or green Thai curry paste
+3 tablespoons fish sauce or anchovy sauce
+1 tablespoon sugar
+1 can coconut milk, about 12 ounces
+3 medium-size Asian eggplants, cut into 1-inch rounds
+Handful of bird's eye chilies
+1/2 cup Thai basil leaves
+Juice of 3 limes
+1/2 to 2 fish heads, depending on size, about 5 pounds total
+2 tablespoons vegetable oil
+1/4 cup red or green Thai curry paste
+3 tablespoons fish sauce or anchovy sauce
+1 tablespoon sugar
+1 can coconut milk, about 12 ounces
+3 medium-size Asian eggplants, cut into 1-inch rounds
+Handful of bird's eye chilies
+1/2 cup Thai basil leaves
+Juice of 3 limes
+1/2 to 2 fish heads, depending on size, about 5 pounds total
+2 tablespoons vegetable oil
+1/4 cup red or green Thai curry paste
+3 tablespoons fish sauce or anchovy sauce
+1 tablespoon sugar
+1 can coconut milk, about 12 ounces
+3 medium-size Asian eggplants, cut into 1-inch rounds
+Handful of bird's eye chilies
+1/2 cup Thai basil leaves
+Juice of 3 limes
+";
